ng-include works
Signed-off-by: Tegra Morgan <tegra.morgan.net@gmail.com>

--- a/WebContent/pages/login.html
+++ b/WebContent/pages/login.html
@@ -1,4 +1,4 @@
-<form id="loginForm" ng-if="navLogin" name="loginForm" ng-submit="lCtrl.login()" novalidate action="">
+<form id="loginForm" ng-if="true" name="loginForm" ng-submit="lCtrl.login()" novalidate action="">
       <div class="row">
         <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3">
           <div class="account-wall">
