--- a/WebContent/pages/registration.html
+++ b/WebContent/pages/registration.html
@@ -1,4 +1,4 @@
-<div class="row" id="registrationForm" ng-if="navRegister">
+<div class="row" id="registrationForm" ng-if="true">
       <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3">
         <div class="account-wall">
           <div class="row">
