--- a/WebContent/pages/registration.html
+++ b/WebContent/pages/registration.html
@@ -1,4 +1,4 @@
-<div class="row" id="registrationForm" ng-if="true">
+<div class="row" id="registrationForm">
       <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3">
         <div class="account-wall">
           <div class="row">
@@ -10,7 +10,7 @@
             </div>
           </div>
           <!-- registerForm.$valid && -->
-          <form ng-submit="lCtrl.register()" name="registerForm" novalidate action="">
+          <form ng-submit="lCtrt.register()" name="registerForm" novalidate action="">
             <div class="form-group">
               <div class="row">
                 <div class="col-xs-8 col-xs-offset-2">
@@ -20,10 +20,10 @@
                 <div class="col-xs-8 col-xs-offset-2">
                   <div>
                     <label for="InputUsername1">Username</label> <input type="text" name="InputUsername1" class="form-control" id="InputUsername1" placeholder="Username"
-                      ng-model="lCtrl.newCustomer.username" data-trigger="hover" data-toggle="popover" data-placement="bottom" data-content="{{lCtrl.usernameError}}" required
+                      ng-model="lCtrt.newCustomer.username" data-trigger="hover" data-toggle="popover" data-placement="bottom" data-content="{{lCtrt.usernameError}}" required
                     >
                   </div>
-                  <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrl.newUserNameOk">{{lCtrl.usernameError}}</div>
+                  <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrt.newUserNameOk">{{lCtrt.usernameError}}</div>
                 </div>
               </div>
 
@@ -31,76 +31,76 @@
                 <div class="col-xs-8 col-xs-offset-2">
                   <div>
                     <label for="InputEmail1">Email address</label> <input type="email" name="InputEmail1" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Em@il"
-                      required ng-model="lCtrl.newCustomer.email" data-trigger="hover" data-toggle="popover" data-placement="bottom" data-content="{{lCtrl.emailerror}}"
+                      required ng-model="lCtrt.newCustomer.email" data-trigger="hover" data-toggle="popover" data-placement="bottom" data-content="{{lCtrt.emailerror}}"
                     >
                   </div>
-                  <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrl.newEmailOk">{{lCtrl.emailerror}}</div>
+                  <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrt.newEmailOk">{{lCtrt.emailerror}}</div>
                 </div>
               </div>
 
               <div class="row">
                 <div class="col-xs-8 col-xs-offset-2">
                   <div>
-                    <label for="InputStreet1">Street name</label> <input type="text" class="form-control" required ng-model="lCtrl.newCustomer.street" id="InputStreet1" placeholder="Street name"
-                      data-trigger="hover" data-toggle="popover" data-placement="bottom" data-content="{{lCtrl.streetError}}"
+                    <label for="InputStreet1">Street name</label> <input type="text" class="form-control" required ng-model="lCtrt.newCustomer.street" id="InputStreet1" placeholder="Street name"
+                      data-trigger="hover" data-toggle="popover" data-placement="bottom" data-content="{{lCtrt.streetError}}"
                     >
                   </div>
-                  <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrl.newStreetOk">{{lCtrl.streetError}}</div>
+                  <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrt.newStreetOk">{{lCtrt.streetError}}</div>
                 </div>
               </div>
 
               <div class="row">
                 <div class="col-xs-8 col-xs-offset-2">
                   <div>
-                    <label for="InputNumber1">Block number</label> <input type="number" class="form-control" required ng-model="lCtrl.newCustomer.blockNum" id="InputNumber1" placeholder="Block number"
-                      data-trigger="hover" data-toggle="popover" data-placement="bottom" data-content="{{lCtrl.blockError}}"
+                    <label for="InputNumber1">Block number</label> <input type="number" class="form-control" required ng-model="lCtrt.newCustomer.blockNum" id="InputNumber1" placeholder="Block number"
+                      data-trigger="hover" data-toggle="popover" data-placement="bottom" data-content="{{lCtrt.blockError}}"
                     >
                   </div>
-                  <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrl.newBlockNumberOk">{{lCtrl.blockError}}</div>
+                  <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrt.newBlockNumberOk">{{lCtrt.blockError}}</div>
                 </div>
               </div>
 
               <div class="row">
                 <div class="col-xs-8 col-xs-offset-2">
                   <div>
-                    <label for="InputCity1">City name</label> <input type="text" class="form-control" required ng-model="lCtrl.newCustomer.city" id="InputCity1" placeholder="City name"
-                      data-trigger="hover" data-toggle="popover" data-placement="bottom" data-content="{{lCtrl.cityError}}"
+                    <label for="InputCity1">City name</label> <input type="text" class="form-control" required ng-model="lCtrt.newCustomer.city" id="InputCity1" placeholder="City name"
+                      data-trigger="hover" data-toggle="popover" data-placement="bottom" data-content="{{lCtrt.cityError}}"
                     >
                   </div>
-                  <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrl.newCityOk">{{lCtrl.cityError}}</div>
+                  <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrt.newCityOk">{{lCtrt.cityError}}</div>
                 </div>
               </div>
 
               <div class="row">
                 <div class="col-xs-8 col-xs-offset-2">
                   <div>
-                    <label for="InputZIP1">ZIP code</label> <input type="number" class="form-control" required ng-model="lCtrl.newCustomer.zip" id="InputZIP1" placeholder="ZIP code"
-                      data-trigger="hover" data-toggle="popover" data-placement="bottom" data-content="{{lCtrl.zipError}}"
+                    <label for="InputZIP1">ZIP code</label> <input type="number" class="form-control" required ng-model="lCtrt.newCustomer.zip" id="InputZIP1" placeholder="ZIP code"
+                      data-trigger="hover" data-toggle="popover" data-placement="bottom" data-content="{{lCtrt.zipError}}"
                     >
                   </div>
-                  <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrl.newZIPOk">{{lCtrl.zipError}}</div>
+                  <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrt.newZIPOk">{{lCtrt.zipError}}</div>
                 </div>
               </div>
 
               <div class="row">
                 <div class="col-xs-8 col-xs-offset-2">
                   <div>
-                    <label for="InputPhone1">Phone number</label> <input type="tel" class="form-control" required ng-model="lCtrl.newCustomer.phone" id="InputPhone1" placeholder="Phone number"
-                      data-trigger="hover" data-toggle="popover" data-placement="bottom" data-content="{{lCtrl.phoneError}}"
+                    <label for="InputPhone1">Phone number</label> <input type="tel" class="form-control" required ng-model="lCtrt.newCustomer.phone" id="InputPhone1" placeholder="Phone number"
+                      data-trigger="hover" data-toggle="popover" data-placement="bottom" data-content="{{lCtrt.phoneError}}"
                     >
                   </div>
-                  <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrl.newPhoneOk">{{lCtrl.phoneError}}</div>
+                  <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrt.newPhoneOk">{{lCtrt.phoneError}}</div>
                 </div>
               </div>
 
               <div class="row">
                 <div class="col-xs-8 col-xs-offset-2">
                   <div>
-                    <label for="InputPassword1">Password</label> <input type="password" class="form-control" id="InputPassword1" placeholder="Password" ng-model="lCtrl.newCustomer.password" required
-                      data-trigger="hover" data-toggle="popover" data-placement="bottom" data-content="{{lCtrl.passError}}"
+                    <label for="InputPassword1">Password</label> <input type="password" class="form-control" id="InputPassword1" placeholder="Password" ng-model="lCtrt.newCustomer.password" required
+                      data-trigger="hover" data-toggle="popover" data-placement="bottom" data-content="{{lCtrt.passError}}"
                     >
                   </div>
-                  <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrl.newPassOk">{{lCtrl.passError}}</div>
+                  <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrt.newPassOk">{{lCtrt.passError}}</div>
                 </div>
               </div>
 
@@ -108,10 +108,10 @@
                 <div class="col-xs-8 col-xs-offset-2">
                   <div>
                     <label for="InputPassword2">Repeat password</label> <input type="password" class="form-control" id="InputPassword2" placeholder="Repeat password"
-                      ng-model="lCtrl.newCustomer.password2" required data-trigger="hover" data-toggle="popover" data-placement="bottom" data-content="{{lCtrl.pass2Error}}"
+                      ng-model="lCtrt.newCustomer.password2" required data-trigger="hover" data-toggle="popover" data-placement="bottom" data-content="{{lCtrt.pass2Error}}"
                     >
                   </div>
-                  <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrl.newPass2Ok">{{lCtrl.pass2Error}}</div>
+                  <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrt.newPass2Ok">{{lCtrt.pass2Error}}</div>
                 </div>
               </div>
 
@@ -119,21 +119,21 @@
               <div class="row">
                 <div class="col-xs-8 col-xs-offset-2">
                   <div>
-                    <label for="InputNickname1">Nickname</label> <input type="text" class="form-control" id="InputNickname1" placeholder="Nickname" ng-model="lCtrl.newCustomer.nickname" required
-                      data-trigger="hover" data-toggle="popover" data-placement="bottom" data-content="{{lCtrl.nickError}}"
+                    <label for="InputNickname1">Nickname</label> <input type="text" class="form-control" id="InputNickname1" placeholder="Nickname" ng-model="lCtrt.newCustomer.nickname" required
+                      data-trigger="hover" data-toggle="popover" data-placement="bottom" data-content="{{lCtrt.nickError}}"
                     >
                   </div>
-                  <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrl.newNickOk">{{lCtrl.nickError}}</div>
+                  <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrt.newNickOk">{{lCtrt.nickError}}</div>
                 </div>
               </div>
 
               <div class="row">
                 <div class="col-xs-8 col-xs-offset-2">
                   <div>
-                    <label for="InputDescription1">Short description</label> <input type="text" max="50" class="form-control optional" ng-model="lCtrl.newCustomer.description" id="InputDescription1"
+                    <label for="InputDescription1">Short description</label> <input type="text" max="50" class="form-control optional" ng-model="lCtrt.newCustomer.description" id="InputDescription1"
                       placeholder="Short description" data-trigger="hover" data-toggle="popover" data-placement="bottom" data-content="Please provide a short description of yourself"
                     >
-                    <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrl.newDescOk">{{lCtrl.descError}}</div>
+                    <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrt.newDescOk">{{lCtrt.descError}}</div>
                   </div>
                 </div>
               </div>
@@ -141,11 +141,11 @@
               <div class="row">
                 <div class="col-xs-8 col-xs-offset-2">
                   <div>
-                    <label for="InputPhotoURL1">Photo URL</label> <input type="text" class="form-control optional" id="InputPhotoURL1" placeholder="Photo URL" ng-model="lCtrl.newCustomer.photo"
+                    <label for="InputPhotoURL1">Photo URL</label> <input type="text" class="form-control optional" id="InputPhotoURL1" placeholder="Photo URL" ng-model="lCtrt.newCustomer.photo"
                       data-trigger="hover" data-toggle="popover" data-placement="bottom" data-content="Please provide a URL address for your photo"
                     >
                   </div>
-                  <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrl.newPhotoOk">{{lCtrl.photoError}}</div>
+                  <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrt.newPhotoOk">{{lCtrt.photoError}}</div>
                 </div>
               </div>
 
@@ -154,10 +154,10 @@
         </div>
         <div class="row">
           <div class="col-xs-4 col-xs-offset-2 text-center">
-            <button type="submit" class="btn btn-primary" id="registerButton" ng-click="lCtrl.register()">Register</button>
+            <button type="submit" class="btn btn-primary" id="registerButton" ng-click="lCtrt.register()">Register</button>
           </div>
           <div class="col-xs-4 text-center">
-            <button type="submit" class="btn btn-default" ng-click="lCtrl.navToLogin()">Back to Sing-in</button>
+            <button type="submit" class="btn btn-default" ng-click="lCtrt.navToLogin()">Back to Sing-in</button>
           </div>
         </div>
       </div>
