Added successful registration notifier
Signed-off-by: Tegra Morgan <tegra.morgan.net@gmail.com>

--- a/WebContent/pages/login.html
+++ b/WebContent/pages/login.html
@@ -23,6 +23,7 @@
                   </div>
                 </div>
                 <div class="auth-fail alert alert-danger" role="alert" ng-if="lCtrt.wrongLoginData">{{lCtrt.wrongLoginMessage}}</div>
+                <div class="auth-fail alert alert-success" role="alert" ng-if="lCtrt.registrationSuccessful">New user registered successfully</div>
               </div>
             </div>
           </div>
