Login works properly
Signed-off-by: Tegra Morgan <tegra.morgan.net@gmail.com>

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -22,7 +22,7 @@
 
   <div class="debug">{{includeView}}</div>
   <div class="container-fluid">
-     <div id="jwa" ng-include="includeView" ng-if="true"></div>
+     <div id="jwa" ng-include="includeView"></div>
   </div>
 
 </body>
