--- a/WebContent/pages/login.html
+++ b/WebContent/pages/login.html
@@ -30,7 +30,7 @@
 
           <div class="row">
             <div class="col-xs-4 col-xs-offset-2 text-center">
-              <button type="submit" class="btn btn-primary" ng-click="lCtrt.login()">
+              <button type="submit" class="btn btn-primary">
                 Sing-in <span class="glyphicon glyphicon-log-in"></span>
               </button>
             </div>
