--- a/WebContent/inDevelopment/store_template.html
+++ b/WebContent/inDevelopment/store_template.html
@@ -1,8 +1,5 @@
-<div ng-if="navLibrary" ng-controller="LibController as lib">
+<div ng-controller="LibController as lib">
       <div class="booklist">
-        
-        <!-- Navigatin menu goes here -->
-        
         <div class="row">
           <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1">
             <table class="center table table-hover table-striped table-bordered">
