Working on shop view
Signed-off-by: Tegra Morgan <tegra.morgan.net@gmail.com>

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -20,7 +20,8 @@
 </head>
 <body id="mainbody" data-ng-app="uwl" ng-controller="LandingController as lCtrt">
 
-  <div class="debug">{{includeView}}</div>
+  <div id="debug1" class="debug">{{includeView}}</div>
+  <div id="debug2" class="debug"></div>
   <div class="container-fluid">
      <div id="navMenu" ng-if="menuEnabled" ng-include="navmenu">
      
