--- a/WebContent/inDevelopment/store_template.html
+++ b/WebContent/inDevelopment/store_template.html
@@ -3,8 +3,8 @@
         <div class="row">
           <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1">
             <table class="center table table-hover table-striped table-bordered">
-              <tr ng-show="product.canRead" ng-repeat="product in lib.products">
-                <td class="shop-row-1"><img class="book-thumb img-thumbnail" ng-src="{{product.imageURL}}"></td>
+              <tr ng-show="true" ng-repeat="product in products track by product.bid">
+                <td class="shop-row-1"><img class="book-thumb img-thumbnail" ng-src="{{product.imageUrl}}"></td>
                 <td class="shop-row-2">
                   <div><strong>{{product.name}}</strong></div>
                   <div>{{product.price | currency}}</div>
@@ -19,7 +19,7 @@
                     </button>
                   </div>
                   <div>
-                    <button class="btn btn-default" ng-show="product.canBuy">
+                    <button class="btn btn-default" ng-show="true">
                       Add to Cart <span class="glyphicon glyphicon-shopping-cart"></span>
                     </button>
                   </div>
