--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -20,7 +20,10 @@
 </head>
 <body id="mainbody" data-ng-app="uwl" ng-controller="LandingController as lCtrt">
 
-  <div id="debug1" class="debug">{{includeView}}</div>
+  <span data-tooltip-html-unsafe="test" data-tooltip-placement="down">
+    <div id="debug1" class="debug">{{includeView}}</div>
+    </span>
+    
   <div id="debug2" class="debug"></div>
   <div class="container-fluid">
      <div id="navMenu" ng-if="menuEnabled" ng-include="navmenu">
