--- a/WebContent/inDevelopment/store_template.html
+++ b/WebContent/inDevelopment/store_template.html
@@ -9,6 +9,27 @@
                    <div style="text-align: left;"><strong>{{product.name}}</strong> {{product.price | currency}}</div>
                    <div>By {{product.author}}</div>
                   <div class="center">{{product.description}}</div>
+                  <div class="panel-group">
+                      <div class="panel panel-default">
+                        <div class="panel-heading">
+                          <h4 class="panel-title">
+                            <a data-toggle="collapse" href="#collapse{{product.bid}}">
+                              <span class="glyphicon glyphicon-comment"></span> Reviews 
+                              <span class="badge">{{product.reviewCount}}</span>
+                            </a>
+                          </h4>
+                        </div>
+                        <div id="collapse{{product.bid}}" class="panel-collapse collapse">
+                          <ul class="list-group">
+                            <li class="list-group-item" data-ng-repeat="re in product.reviews">
+                              <div>{{re.nickname}}</div>
+                              <div>{{re.reviewBody}}</div>
+                            </li>
+                          </ul>
+                          <div class="panel-footer">Footer</div>
+                        </div>
+                      </div>
+                    </div>
                 </td>
                 <td width="25%">
                   <button id="but{{product.bid}}" data-trigger="hover" 
@@ -18,7 +39,7 @@
                   <span class="glyphicon glyphicon-thumbs-up"></span></button>
                   <div>
                     <button class="btn btn-default" on-click="lib.openreview(product.name)">
-                      Read reviews <span class="glyphicon glyphicon-eye-open"></span>
+                      Read <span class="glyphicon glyphicon-book"></span>
                     </button>
                   </div>
                   <div>
