--- a/WebContent/pages/navMenu.html
+++ b/WebContent/pages/navMenu.html
@@ -20,15 +20,8 @@
             <li class="active"><a href="#">Marketplace<span class="sr-only">(current)</span></a></li>
             <li><a href="#">My books</a></li>
           </ul>
-          <form class="navbar-form navbar-right">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search" ng-bind="query">
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-            <div class="nav navbar-nav navbar-right"></div>
-          </form>
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">Greetings {{user.nickname}} </a></li>
+            <li class="active"><button class="mypop btn btn-danger navbar-btn" data-toggle="popover" data-html="false" data-trigger="hover" data-placement="bottom" data-content="Log out">Greetings {{user.nickname}} </button></li>
           </ul>
         </div>
         <!-- /.navbar-collapse -->
