--- a/WebContent/pages/store.html
+++ b/WebContent/pages/store.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-xs-4 col-xs-offset-4">
         <div class="input-group input-group-sm">
-           <span class="input-group-addon" id="sizing-addon3"><span class="glyphicon glyphicon-filter"></span></span> <input type="text" class="form-control" placeholder="Filter by name, genre or author" ng-model="searchBook" autofocus>
+           <span class="input-group-addon" id="sizing-addon3"><span class="glyphicon glyphicon-filter"></span></span> <input type="text" class="form-control" placeholder="Filter by name, genre or author" ng-model="searchBook">
         </div>
       </div>
       <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1">
