--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -20,17 +20,13 @@
 </head>
 <body id="mainbody" data-ng-app="uwl" ng-controller="LandingController as lCtrt">
 
-  <span data-tooltip-html-unsafe="test" data-tooltip-placement="down">
-    <div id="debug1" class="debug">{{includeView}}</div>
-    </span>
-    
-  <div id="debug2" class="debug"></div>
   <div class="container-fluid">
-     <div id="navMenu" ng-if="menuEnabled" ng-include="navmenu">
-     
-     </div>
-     <div id="jwa" ng-include="includeView"></div>
+    <div id="navMenu" ng-if="menuEnabled" ng-include="navmenu"></div>
+    <div id="mainBody" ng-include="includeView"></div>
   </div>
+
+  <div id="debug1" class="debug">{{includeView}}</div>
+  <div id="debug2" class="debug"></div>
 
 </body>
 </html>
