work in progress
Signed-off-by: Tegra Morgan <tegra.morgan.net@gmail.com>

--- a/WebContent/pages/books/StarBorn.html
+++ b/WebContent/pages/books/StarBorn.html
@@ -1,4 +1,4 @@
-<p class="center"><img src="images/image_03.jpg" alt="Cover" width="650" height="508" /></p>
+<p class="center"><img src="img/books/Star_Born.jpg"" alt="Cover" height="508" /></p>
 <p>&nbsp;</p>
 <h2>ANDRE
   NORTON</h2>
@@ -7,7 +7,6 @@
 <h1>STAR BORN</h1>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p class="center"><img src="images/image_01.jpg" alt="Seal" width="75" height="68" /></p>
 <h3>ace books</h3>
 <h3>A Division of Charter Communications Inc.</h3>
 <h4>1120 Avenue of the Americas</h4>
