--- a/WebContent/pages/reading.html
+++ b/WebContent/pages/reading.html
@@ -6,11 +6,9 @@
 </head>
 <body>
 
-
+<div id="bookContent" ng-include="bookToRead.filepath"></div>
 
 <!-- Temporary content, will be replaced by dynamic linking -->
-
-<h1>empty book</h1>
 
 <!-- End of temporary content -->
 </body>
