--- a/WebContent/pages/store.html
+++ b/WebContent/pages/store.html
@@ -43,7 +43,7 @@
                 <span class="badge">{{product.likescount}}</span> <span class="glyphicon glyphicon-thumbs-up"></span>
               </button>
               <div>
-                <button id="btnRead{{product.bid}}" class="btn btn-default" on-click="lib.openBook({{product.bid}})">
+                <button id="btnRead{{product.bid}}" class="btn btn-default" on-click="lib.navToOpenBook({{product.bid}})">
                   Read <span class="glyphicon glyphicon-book"></span>
                 </button>
               </div>
