Can open my books from store page or from my books page
Signed-off-by: Tegra Morgan <tegra.morgan.net@gmail.com>

--- a/WebContent/pages/books/StarBorn.html
+++ b/WebContent/pages/books/StarBorn.html
@@ -1,4 +1,4 @@
-<p class="center"><img src="img/books/Star_Born.jpg"" alt="Cover" height="508" /></p>
+<h4><img src="img/books/Star_Born.jpg"" alt="Cover" height="508" /></h4>
 <p>&nbsp;</p>
 <h2>ANDRE
   NORTON</h2>
