--- a/WebContent/pages/reading.html
+++ b/WebContent/pages/reading.html
@@ -1,15 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
-<body>
-
+<div class="reading_pane">
 <div id="bookContent" ng-include="bookToRead.filepath"></div>
-
-<!-- Temporary content, will be replaced by dynamic linking -->
-
-<!-- End of temporary content -->
-</body>
-</html>
+</div>
