--- a/WebContent/pages/store.html
+++ b/WebContent/pages/store.html
@@ -36,19 +36,19 @@
                 </div>
               </div>
             </td>
-            <td width="25%">
+            <td class="shop-row-3">
               <button id="btnLike{{product.bid}}" data-trigger="hover" data-html="true" class="mypop btn btn-sm btn-info" data-toggle="popover" data-placement="bottom" title="Liked by"
                 data-content="{{product.likesstring}}"
               >
                 <span class="badge">{{product.likescount}}</span> <span class="glyphicon glyphicon-thumbs-up"></span>
               </button>
               <div>
-                <button id="btnRead{{product.bid}}" class="btn btn-default" ng-click="lib.navToOpenBook()">
+                <button id="btnMeRead{{product.bid}}" class="btn btn-default" ng-click="lib.navToOpenBook(product.bid)">
                   Read <span class="glyphicon glyphicon-book"></span>
                 </button>
               </div>
               <div>
-                <button id="btnBuy{{product.bid}}" class="btn btn-default" ng-show="true">
+                <button id="btnMeBuy{{product.bid}}" class="btn btn-default" ng-show="true">
                   Buy <span class="glyphicon glyphicon-shopping-cart"></span>
                 </button>
               </div>
