Some CSS fixes for improved readability
Signed-off-by: Tegra Morgan <tegra.morgan.net@gmail.com>

--- a/WebContent/pages/books/StarBorn.html
+++ b/WebContent/pages/books/StarBorn.html
@@ -26,8 +26,6 @@ something else?"</p></div>
 
 <hr style="width: 65%;" />
 
-
-<p><span class='pagenum'><a name="Page_5" id="Page_5">[5]</a></span></p>
 <h2><a name="I" id="I"></a>1</h2>
 
 <h3>SHOOTING STAR</h3>
@@ -57,7 +55,7 @@ water-resistant flying-dragon skin, and from the belt which supported
 his short breeches of tanned duocorn hide swung a two-foot blade&mdash;half
 wood-knife, half sword. To the eyes of his Terran forefathers he would
 have presented a barbaric picture. In his own mind he was amply clad
-and armed for the man-journey which<span class='pagenum'><a name="Page_6" id="Page_6">[6]</a></span> was both his duty and his
+and armed for the man-journey which was both his duty and his
 heritage to make before he took his place as a full adult in the
 Council of Free Men.</p>
 
@@ -92,7 +90,7 @@ a minute later what he awaited arrived. A hopper, its red-brown fur
 sleek and gleaming in the sun, its eternal curiosity drawing it,
 peered cautiously from the bushes. Dalgard made mind touch. The
 hoppers did not really think&mdash;at least not on the levels where
-communication was possible for the colonists&mdash;but sen<span class='pagenum'><a name="Page_7" id="Page_7">[7]</a></span>sations of
+communication was possible for the colonists&mdash;but sensations of
 friendship and good will could be broadcast, primitive ideas
 exchanged.</p>
 
@@ -127,7 +125,7 @@ other gifts, they had also a vast, time-consuming patience, which
 could be a weapon or a tool, as they pleased&mdash;not forgetting the
 instantaneous call to action which was their older heritage.</p>
 
-<p>The hopper returned. On the rock beside the shin<span class='pagenum'><a name="Page_8" id="Page_8">[8]</a></span>ing things it
+<p>The hopper returned. On the rock beside the shining things it
 coveted, it dropped dried and shriveled fruit. Dalgard's fingers
 separated two of the gleaming marbles, rolled them toward the animal,
 who scooped them up with a chirp of delight. But it did not leave.
@@ -161,7 +159,7 @@ inch or two to the explorers' map in the Council Hall.</p>
 discovery sometimes between his eighteenth and twentieth year. He went
 alone or, if he formed an attachment with one of the mermen near his
 own age, accompanied only by his knife brother. And from knowledge so
-gained the still-small group<span class='pagenum'><a name="Page_9" id="Page_9">[9]</a></span> of exiles added to and expanded their
+gained the still-small group of exiles added to and expanded their
 information about their new home.</p>
 
 <p>Caution was drilled into them. For they were not the first masters of
@@ -197,7 +195,7 @@ fire&mdash;"</p>
 <p>Dalgard was well acquainted with the ruins which lay not many miles
 from Homeport. And he knew that that sprawling, devastated metropolis
 was not taboo to the merman. But this other mysterious settlement he
-had recently heard of was still shunned by the sea<span class='pagenum'><a name="Page_10" id="Page_10">[10]</a></span> people. Only
+had recently heard of was still shunned by the sea people. Only
 Sssuri and a few others of youthful years would consider a journey to
 explore the long-forbidden section their traditions labeled as
 dangerous land.</p>
@@ -236,7 +234,7 @@ of Astra when most of the higher fauna were asleep&mdash;were very
 distantly related to Sssuri's species, though the gap between them was
 that between highly civilized man and the jungle ape. The runners were
 harmless and shy, but they were noted also for clinging stubbornly to
-one particular district genera<span class='pagenum'><a name="Page_11" id="Page_11">[11]</a></span>tion after generation. To find such a
+one particular district generation after generation. To find such a
 clan on the move into new territory was to be fronted with a puzzle it
 might be well to investigate.</p>
 
@@ -274,7 +272,7 @@ hold on its surface.</p>
 <p>When they stood at last on the heights and looked ahead, it was across
 a broken stretch of bare rock with the green of vegetation beckoning
 from at least a mile beyond. Sssuri hesitated for only a moment or
-two,<span class='pagenum'><a name="Page_12" id="Page_12">[12]</a></span> his round, almost featureless head turning slowly, until he
+two, his round, almost featureless head turning slowly, until he
 fixed on a northeasterly course&mdash;striking out unerringly as if he
 could already sight the goal. Dalgard fell in behind, looking over the
 country with a wary eye. This was just the type of land to harbor
@@ -312,7 +310,7 @@ into Dalgard's as if by the intensity of that gaze he could drive home
 deeper his point.</p>
 
 <p>"What lies to the north was protected in the days before the falling
-fire. Even <i>Those</i>"&mdash;the distorted mer<span class='pagenum'><a name="Page_13" id="Page_13">[13]</a></span>men symbol for Those Others was
+fire. Even <i>Those</i>"&mdash;the distorted mermen symbol for Those Others was
 sharpened by the very hatred of all Sssuri's kind, which had not paled
 during the generations since their escape from slavery to Astra's
 one-time masters&mdash;"could not venture into some of their own private
@@ -346,7 +344,7 @@ more.</p>
 
 <p>Water dwellers fled from their passing and insects buzzed and hovered.
 Otherwise they moved through a deserted world. The stream bed widened
-and small islands of gravel, swept together in untidy piles by<span class='pagenum'><a name="Page_14" id="Page_14">[14]</a></span> the
+and small islands of gravel, swept together in untidy piles by the
 spring floods, arose dry topped, some already showing the green of
 venturesome plants.</p>
 
@@ -1627,7 +1625,7 @@ ringed about by a series of archways. A high stone grille walled this
 portion away from the seats as if to protect the spectators from what
 might enter through those portals.</p>
 
-<p>Dalgard noted all this only in passing, for the arena<span class='pagenum'><a name="Page_49" id="Page_49">[49]</a></span> was occupied,
+<p>Dalgard noted all this only in passing, for the arena was occupied,
 very much occupied. And he knew the occupiers only too well.</p>
 
 <p>Three full-grown snake-devils were stretched at pulpy ease, their
@@ -1662,7 +1660,7 @@ the untamed snake-devils, regarded by merman and human alike as so
 dangerous as to be killed on sight, could be banded&mdash;as if they were
 personal pets!</p>
 
-<p>For a moment or two a wild idea crossed Dalgard's<span class='pagenum'><a name="Page_50" id="Page_50">[50]</a></span> mind. How long was
+<p>For a moment or two a wild idea crossed Dalgard's mind. How long was
 the natural life span of a snake-devil? Until the coming of the
 colonists they had been the undisputed rulers of the deserted
 continent, stupid as they were, simply because of their strength and
