--- a/WebContent/pages/books/Youth.html
+++ b/WebContent/pages/books/Youth.html
@@ -10,7 +10,7 @@ that they could never show
 their new pets to their
 parents.</big></b></p></div>
 
-<div class="figh"><img src="images/001.png" width="700" height="309" alt="" title="" /></div>
+<div class="center"><img src=""img/books/youth.jpg"" height="300" alt="" title="" /></div>
 
 <p class="cap"><span class="dcap">There</span> was a spatter of
 pebbles against the window
@@ -231,8 +231,6 @@ up."</p>
 and intense. "You meant
 that? You want to go in with
 me?"</p>
-
-<div class="figc"><img src="images/002.png" width="600" height="434" alt="" title="" /></div>
 
 <p>"What do you mean?" Slim
 stepped back a bit, surprised
@@ -584,8 +582,6 @@ wasn't the bomb that defeated
 us, but our own shell shock.
 This may be the last chance
 to reverse the process."</p>
-
-<div class="figc"><img src="images/003.png" width="600" height="429" alt="" title="" /></div>
 
 <p>"Tell me," said the Industrialist,
 "what do these
