fixed picture url not displaying correctly
Signed-off-by: Tegra Morgan <tegra.morgan.net@gmail.com>

--- a/WebContent/pages/books/Youth.html
+++ b/WebContent/pages/books/Youth.html
@@ -10,7 +10,7 @@ that they could never show
 their new pets to their
 parents.</big></b></p></div>
 
-<div class="center"><img src=""img/books/youth.jpg"" height="300" alt="" title="" /></div>
+<div class="center"><img src="img/books/youth.jpg" height="300" alt="" title="" /></div>
 
 <p class="cap"><span class="dcap">There</span> was a spatter of
 pebbles against the window
