Reworked like buttons on shop menu
Signed-off-by: Tegra Morgan <tegra.morgan.net@gmail.com>

--- a/WebContent/pages/navMenu.html
+++ b/WebContent/pages/navMenu.html
@@ -17,11 +17,11 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="myNavBar">
           <ul class="nav navbar-nav">
-            <li class="active"><button id="btnStore" type="button" class="btn navbar-btn" ng-click="lCtrt.navToStore()">Store</button></li>
+            <li><button id="btnStore" type="button" class="btn navbar-btn btn-default" ng-click="lCtrt.navToStore()">Store</button></li>
             <li><button id="btnMyBooks" type="button" class="btn navbar-btn btn-default" ng-click="lCtrt.navToMyBooks()">My books</button></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><button class="mypop btn btn-danger navbar-btn" 
+            <li><button class="mypop btn btn-danger navbar-btn" 
             data-toggle="popover" 
             data-html="false" data-trigger="hover" data-placement="bottom" 
             data-content="Log out">Greetings {{user.nickname}} </button></li>
