--- a/WebContent/pages/store.html
+++ b/WebContent/pages/store.html
@@ -37,18 +37,19 @@
               </div>
             </td>
             <td class="shop-row-3">
-              <button id="btnLike{{product.bid}}" data-trigger="hover" data-html="true" class="mypop btn btn-sm btn-info" data-toggle="popover" data-placement="bottom" title="Liked by"
-                data-content="{{product.likesstring}}"
-              >
-                <span class="badge">{{product.likescount}}</span> <span class="glyphicon glyphicon-thumbs-up"></span>
-              </button>
+            <div id="btnLike{{product.bid}}" data-trigger="hover" class="mypop" data-html="true" data-toggle="popover" data-placement="bottom" title="Liked by" data-content="{{product.likesstring}}">
+              <span  class="label label-info mylikeclass">
+                <span style="vertical-align: text-bottom;" class="glyphicon glyphicon-thumbs-up"></span> <span class="badge">   {{product.likescount}}</span> 
+              </span>
+              </div>
+              <br>
               <div>
-                <button id="btnMeRead{{product.bid}}" class="btn btn-default" ng-click="lib.navToOpenBook(product.bid)">
+                <button id="btnMeRead{{product.bid}}" class="btn btn-default hidden" ng-click="lib.navToOpenBook(product.bid)">
                   Read <span class="glyphicon glyphicon-book"></span>
                 </button>
               </div>
               <div>
-                <button id="btnMeBuy{{product.bid}}" class="btn btn-default" ng-show="true">
+                <button id="btnMeBuy{{product.bid}}" class="btn btn-primary hidden" ng-show="true">
                   Buy <span class="glyphicon glyphicon-shopping-cart"></span>
                 </button>
               </div>
